Use root PDF for download

--- a/web/index.html
+++ b/web/index.html
@@ -9,46 +9,72 @@
   <body>
     <header class="site-header">
       <div class="container site-header__inner">
-        <div class="site-title">
+        <div class="site-title" role="group" aria-label="Seitentitel und Aktionen">
           <h1>Datamaskinerne og Samfundet</h1>
-          <p class="subtitle">Dänisch &ndash; Deutsch Paralleltext</p>
-        </div>
-        <div class="view-toggle" role="group" aria-label="Sprachauswahl">
-          <label class="view-option">
-            <input type="radio" name="mode" value="de" />
-            <span class="flag-label">
-              <img src="assets/flags/germany.svg" alt="Flagge Deutschlands" />
-              <span>Deutsch</span>
-            </span>
-          </label>
-          <label class="view-option">
-            <input type="radio" name="mode" value="da" />
-            <span class="flag-label">
-              <img src="assets/flags/denmark.svg" alt="Flagge Dänemarks" />
-              <span>Dänisch</span>
-            </span>
-          </label>
-          <label class="view-option">
-            <input type="radio" name="mode" value="both" checked />
-            <span class="flag-label flag-label--dual">
-              <img src="assets/flags/germany.svg" alt="Flagge Deutschlands" />
-              <img src="assets/flags/denmark.svg" alt="Flagge Dänemarks" />
-              <span>Beides</span>
-            </span>
-          </label>
+          <div class="header-controls">
+            <div class="view-toggle" role="group" aria-label="Sprachauswahl">
+              <label class="view-option">
+                <input type="radio" name="mode" value="de" />
+                <span class="flag-label">
+                  <img src="assets/flags/germany.svg" alt="Flagge Deutschlands" />
+                  <span>Deutsch</span>
+                </span>
+              </label>
+              <label class="view-option">
+                <input type="radio" name="mode" value="da" />
+                <span class="flag-label">
+                  <img src="assets/flags/denmark.svg" alt="Flagge Dänemarks" />
+                  <span>Dänisch</span>
+                </span>
+              </label>
+              <label class="view-option">
+                <input type="radio" name="mode" value="both" checked />
+                <span class="flag-label flag-label--dual">
+                  <img src="assets/flags/germany.svg" alt="Flagge Deutschlands" />
+                  <img src="assets/flags/denmark.svg" alt="Flagge Dänemarks" />
+                  <span>Beides</span>
+                </span>
+              </label>
+            </div>
+            <a class="download-button" href="../20151128Übersetzung.pdf" download>
+              PDF herunterladen
+            </a>
+          </div>
         </div>
       </div>
     </header>
+    <nav class="toc-bar">
+      <div class="container toc-bar__inner">
+        <button id="toc-toggle" class="toggle-button" aria-expanded="true" aria-controls="toc-list">
+          Inhaltsverzeichnis
+        </button>
+        <div id="toc-panel" class="collapse-panel is-open">
+          <ol id="toc-list" class="toc-list"></ol>
+        </div>
+      </div>
+    </nav>
     <main>
       <section class="container glossary-section">
-        <h2 class="section-title">Glossar &amp; Hinweise</h2>
-        <div id="glossary-content" class="glossary-content"></div>
+        <div class="section-header">
+          <h2 class="section-title">Glossar &amp; Hinweise</h2>
+          <button id="glossary-toggle" class="toggle-button" aria-expanded="false" aria-controls="glossary-content">
+            Glossar anzeigen
+          </button>
+        </div>
+        <div id="glossary-content" class="glossary-content collapse-panel"></div>
       </section>
       <section class="container translation-section">
         <div class="translation-header">
           <h2 class="section-title">Übersetzung</h2>
         </div>
         <div id="content" class="content" data-mode="both"></div>
+      </section>
+      <section class="container footnotes-section">
+        <div class="section-header">
+          <h2 class="section-title">Fußnoten</h2>
+          <p class="section-hint">Alle Hinweise sind durchsuchbar und mit den Textmarken verknüpft.</p>
+        </div>
+        <div id="footnotes-content" class="footnotes-content"></div>
       </section>
     </main>
     <footer class="site-footer">
