--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
                 </span>
               </label>
             </div>
-            <a class="download-button" href="../20251128Übersetzung.pdf" download>
+            <a class="download-button" href="../2025-12-01-Übersetzung.pdf" download>
               PDF herunterladen
             </a>
           </div>
